--- a/jdk6u45-src-win-x64/pom.xml
+++ b/jdk6u45-src-win-x64/pom.xml
@@ -12,4 +12,13 @@
     <properties>
         <maven.deploy.skip>false</maven.deploy.skip>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
+
+
 </project>
