--- a/jdk7u80-src-mac-x64/pom.xml
+++ b/jdk7u80-src-mac-x64/pom.xml
@@ -12,4 +12,12 @@
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
